# agentic-evolve

./: .gitignore  README.md  _config.yml  activate-env.sh  api.py  cloudgpt_proxy.py  env.sh  opencode.cloudgpt.json  pyproject.toml  setup-path.sh
alpha-diagnosis/: README.md  _verify_agent_review.py  literature_review.md  pyproject.toml
alpha-diagnosis/adapters/: adaptive_temporal_smooth_control.yaml  ev2gym_smart_charging.yaml  general_meio.yaml  high_reliable_simulation.yaml  pid_tuning.yaml  sustaindc.yaml
alpha-diagnosis/alpha_diagnosis/: __init__.py  cli.py  config_schema.py  direction_extract.py  discovery.py  fork.py  history_review.py  injection_counterfactual.py  injection_pro.py  orchestrator.py  plot.py  prompt_builder.py  rule_extract.py  stuck_monitor.py  vague_rule.py
alpha-diagnosis/examples/: vague_rule_injection_example.md
alpha-diagnosis/scripts/: _export_cycle02_rules.py  _test_counterfactual_prompt.py  _test_pro_prompt.py  run_manual_injection.py  run_pro_reinject_c1.sh
alpha-diagnosis/templates/: history_review_prompt.md.j2  rule_guided_prompt.md.j2  rule_guided_prompt_counterfactual.md.j2  rule_guided_prompt_mode_detection.md.j2  rule_guided_prompt_pro.md.j2  rule_guided_prompt_vague.md.j2
alpha-diagnosis/workflows/: ev2gym_smart_charging_rich_feedback.yaml  general_meio_rich_feedback.yaml  high_reliable_simulation_rich_feedback.yaml  optics_temporal_smooth_algorithm_rule.yaml  optics_temporal_smooth_counterfactual.yaml  optics_temporal_smooth_pro_reinject_c1.yaml  optics_temporal_smooth_rich_feedback.yaml  pid_tuning_algorithm_rule.yaml  pid_tuning_rich_feedback.yaml  sustaindc_rich_feedback.yaml  sustaindc_rich_feedback_agent_review.yaml  sustaindc_rich_feedback_vague.yaml
wentian/: README.md  pyproject.toml
wentian/templates/: hub_prompt.md.j2  hub_prompt_optics_temporal_smooth.md.j2
wentian/wentian/: __init__.py  (+12 more)
(+454 files in other folders)
