[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-evolve"
version = "0.1.0"
description = "Agentic program evolution framework using OpenCode"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
example = ["numpy>=1.20"]
alpha-diagnosis = ["jinja2>=3.0", "matplotlib>=3.5"]

[project.scripts]
agentic-evolve = "agentic_evolve.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_evolve*"]
