[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-diagnosis"
version = "0.1.0"
description = "Automated diagnostic rule discovery orchestration for agentic-evolve"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = ["agentic-evolve[example]"]

[project.scripts]
alpha-diagnosis = "alpha_diagnosis.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["alpha_diagnosis*"]
