[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wentian"
version = "0.1.0"
description = "Hub-agent orchestration for agentic-evolve sub-task exploration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "agentic-evolve>=0.1.0",
]

[project.optional-dependencies]
dev = ["agentic-evolve[example]"]

[project.scripts]
wentian = "wentian.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wentian*"]

[tool.setuptools.package-data]
wentian = ["../templates/*.j2"]
